force-app/main/default/objects/OBCampaignMember_OLD__c/OBCampaignMember_OLD__c.object-meta.xml
<CustomObject>
    <label>OB Campaign Member OLD</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>OB Campaign Member OLD</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OB Campaign Members OLD</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>