force-app/main/default/objects/OBCampaignMember_OLD__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <formula>Name__r.Gift_Card_Order__r.Date_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>