force-app/main/default/objects/OBCampaignMember_OLD__c/fields/Do_Not_Call_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Call: Campaign</label>
    <type>Checkbox</type>
</CustomField>