force-app/main/default/objects/OBCampaignMember_OLD__c/fields/LeadCreationToken__c.field-meta.xml
<CustomField>
    <fullName>LeadCreationToken__c</fullName>
    <description>This is an auto created Lead Token created for LeadQual.  Please DO NOT DELETE. This will be the same for every lead created.  It is not an auto number.</description>
    <formula>&quot;NH3129&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is an auto created Lead Token created for LeadQual.  Please DO NOT DELETE.</inlineHelpText>
    <label>LeadCreationToken</label>
    <type>Text</type>
</CustomField>