force-app/main/default/objects/OBCampaignMember_OLD__c/fields/MSA__c.field-meta.xml
<CustomField>
    <fullName>MSA__c</fullName>
    <formula>Text(Name__r.MSA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSA</label>
    <type>Text</type>
</CustomField>