force-app/main/default/objects/OBCampaignMember_OLD__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>OB_Campaign_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>