force-app/main/default/objects/OBCampaignMember_OLD__c/fields/Respond_Date__c.field-meta.xml
<CustomField>
    <fullName>Respond_Date__c</fullName>
    <formula>Name__r.Respond_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Respond Date</label>
    <type>Date</type>
</CustomField>