force-app/main/default/objects/OBCampaignMember_OLD__c/fields/Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Date__c</fullName>
    <formula>Name__r.Sale_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale Date</label>
    <type>Date</type>
</CustomField>